--- a/_config.yml
+++ b/_config.yml
@@ -1,38 +1,25 @@
-
-# SEO
-title: Swiss Jekyll Theme
-description: A bold typographic theme inspired by Swiss design.
-
-# social
-social_link: twitter
-social_username: broccolini
-github_repo: athena # the GitHub repo name for your project
-github_username: broccolini
+title: Kernel Hackers | Blog
+description: Tech Enthusiasm at its Peak.
+social_link: instagram
+social_username: rajputaashu25
+github_repo: kernelHOOkers
+github_username: Dev7083
 theme_color: black
-
-# Theme
-remote_theme: 'internet-de-france/swiss'
-baseurl: '/kernelhackers_blog'
-
-# Defaults
-
+remote_theme: internet-de-france/swiss
+baseurl: /kernelhackers_blog
 defaults:
-  -
-    scope:
-      path: ""
-      type: "pages"
+  - scope:
+      path: ''
+      type: pages
     values:
-      category_name: ""
-  -
-    scope:
-      path: ""
-      type: "posts"
+      category_name: ''
+  - scope:
+      path: ''
+      type: posts
     values:
-      categories: ""
-
-# Stastic UI
-remote_theme_layouts: 
-  - ""
+      categories: ''
+remote_theme_layouts:
+  - ''
   - default
   - page
   - post
@@ -43,7 +30,6 @@ social_links:
   - instagram
   - medium
   - dribbble
-
 theme_colors:
   - black
   - blue
@@ -53,5 +39,3 @@ theme_colors:
   - red
   - white
   - yellow
-
-
