--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Kernel Hackers | Blog
+title: BuddySync | Blog
 description: Tech Enthusiasm at its Peak.
 social_link: instagram
 social_username: rajputaashu25
